--- a/results.html
+++ b/results.html
@@ -111,12 +111,13 @@
           <p>Online shopping for Gaming Laptops from a great selection at Electronics Store.</p>
       </div>
       <div class="set2">
-            <h3><a href="https://anilturaga.github.io/bieap/">Winter | Laptops | Gaming</a></h3>
+            <h3><a href="https://anilturaga.github.io/Winter/category.html">Winter | Laptops | Gaming</a></h3>
             <p>For the best gaming laptop experience, winter.com has gaming laptops with the processing and graphic capabilities you need to play the ...</p>
         </div>
       <div class="set3">
-            <h3><a href="https://anilturaga.github.io/bieap/">Gaming Laptops @ Divisma</a></h3>
-            <p>Windows 10 Home; Intel® Core™ i7-8750H processor Hexa-core 2.20 GHz; NVIDIA® GeForce® GTX 1050 Ti with 4 GB dedicated memory; 15.6" Full HD (1920 ...</p>
+            <h3><a href="localhost:8000/dell">Gaming Laptops @ Dell</a></h3>
+            <p>Dell provides technology solutions, services & support. Buy Laptops, Touch Screen PCs, Desktops, Servers, Storage, Monitors, Gaming & Accessories.
+...</p>
         </div>
       <div class="set4">
             <h3><a href="https://anilturaga.github.io/bieap/">Esports Shopper</a></h3>
