--- a/results.html
+++ b/results.html
@@ -12,6 +12,7 @@
             height:100%;
             padding:0;
             margin:0;
+            background-color:white !important;
         }
         /*
         .s003{
@@ -68,11 +69,14 @@
 
         }
         a{
-            color:#0f0036;
+            color:#0000EE;
+            text-decoration:none !important;
         }
         a:hover{
-            color:#127782;
+            text-decoration:underline !important;
         }
+        p{
+          color: #0D6E5C !important;
     </style>
   </head>
   <body>
