--- a/results.html
+++ b/results.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
     <style>
-        body{
+        body,.s003{
             width:100%;
             height:100%;
             padding:0;
