--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <html>
   <head>
+    <title>Search Engine</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="colorlib.com">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
+    <style>
+      body,.s003{
+        background-color:white !important;
+    </style>
   </head>
   <body>
     <div class="s003">
@@ -13,16 +18,7 @@
         <div class="inner-form">
           <div class="input-field first-wrap">
             <div class="input-select">
-              <select data-trigger="" name="choices-single-defaul">
-                <option placeholder="">Category</option>
-                <option>New Arrivals</option>
-                <option>Sale</option>
-                <option>Ladies</option>
-                <option>Men</option>
-                <option>Clothing</option>
-                <option>Footwear</option>
-                <option>Accessories</option>
-              </select>
+              Search Engine
             </div>
           </div>
           <div class="input-field second-wrap">
