--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
     <style>
       body,.s003{
         background-color:white !important;
+        display:flex !important;
+        flex-direction:column !important;
+      }
     </style>
   </head>
   <body>
     <div class="s003">
+      <h1>Team 9</h1>
       <form>
         <div class="inner-form">
           <div class="input-field first-wrap">
-            <div class="input-select">
+            <div class="input-select" style="text-align:center !important;justify-content:center !important;align-items:center !important;">
               Search Engine
             </div>
           </div>
