--- a/index.html
+++ b/index.html
@@ -13,17 +13,31 @@
         display:flex !important;
         flex-direction:column !important;
       }
+      .inner-form{
+          display:flex !important;
+        flex-direction:row !important;
+      }
+      .red{
+        color:red !important;
+      }
+      .blue{
+        color:blue !important;
+      }
+      .orange{
+        color:orange !important;
+      }
+      .green{
+        color:green !important;
+      }
     </style>
   </head>
   <body>
     <div class="s003">
-      <h1>Team 9</h1>
+      <h1 style="padding-bottom:5% !important;><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span> 9</h1>
       <form>
         <div class="inner-form">
-          <div class="input-field first-wrap">
-            <div class="input-select" style="text-align:center !important;justify-content:center !important;align-items:center !important;">
+          <div class="input-field first-wrap" style="text-align:center !important;justify-content:center !important;align-items:center !important;">
               Search Engine
-            </div>
           </div>
           <div class="input-field second-wrap">
             <input id="search" type="text" placeholder="Enter Keywords?" />
