--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
   </head>
   <body>
     <div class="s003">
-      <h1 style="padding-bottom:5% !important;><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span> 9</h1>
+      <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span> 9</h1>
       <form>
         <div class="inner-form">
           <div class="input-field first-wrap" style="text-align:center !important;justify-content:center !important;align-items:center !important;">
-              Search Engine
+            <p>Search Engine</p>
           </div>
           <div class="input-field second-wrap">
             <input id="search" type="text" placeholder="Enter Keywords?" />
