--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       .green{
         color:green !important;
       }
+      h1{
+        font-size:300% !important;
     </style>
   </head>
   <body>
@@ -36,9 +38,6 @@
       <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span> 9</h1>
       <form>
         <div class="inner-form">
-          <div class="input-field first-wrap" style="text-align:center !important;justify-content:center !important;align-items:center !important;">
-            <p>Search Engine</p>
-          </div>
           <div class="input-field second-wrap">
             <input id="search" type="text" placeholder="Enter Keywords?" />
           </div>
