--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         color:green !important;
       }
       h1{
-        font-size:300% !important;
+        font-size:300% !important;}
     </style>
   </head>
   <body>
