--- a/results.html
+++ b/results.html
@@ -25,6 +25,24 @@
             position: fixed;
             top:5%;
         }
+        .inner-form{
+          display:flex !important;
+        flex-direction:row !important;
+      }
+      .red{
+        color:red !important;
+      }
+      .blue{
+        color:blue !important;
+      }
+      .orange{
+        color:orange !important;
+      }
+      .green{
+        color:green !important;
+      }
+      h1{
+        font-size:300% !important;}
         .result{
             width:100%;
             height:80%;
@@ -84,6 +102,7 @@
     <div class="s003">
       <form>
         <div class="inner-form">
+          <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span> 9</h1>
           <div class="input-field first-wrap">
             <div class="input-select">
               <select data-trigger="" name="choices-single-defaul">
