--- a/results.html
+++ b/results.html
@@ -25,7 +25,7 @@
             position: fixed;
             top:5%;
         }
-        .inner-form{
+        .inner-form,form{
           display:flex !important;
         flex-direction:row !important;
       }
@@ -104,20 +104,6 @@
          <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span> 9</h1>
          
         <div class="inner-form">
-          <div class="input-field first-wrap">
-            <div class="input-select">
-              <select data-trigger="" name="choices-single-defaul">
-                <option placeholder="">Category</option>
-                <option>New Arrivals</option>
-                <option>Sale</option>
-                <option>Ladies</option>
-                <option>Men</option>
-                <option>Clothing</option>
-                <option>Footwear</option>
-                <option>Accessories</option>
-              </select>
-            </div>
-          </div>
           <div class="input-field second-wrap">
             <input id="search" type="text" value="Gaming laptops" placeholder="Enter Keywords?" />
           </div>
