--- a/results.html
+++ b/results.html
@@ -101,7 +101,7 @@
   <body>
     <div class="s003">
       <form>
-         <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span> 9</h1>
+         <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span>&nbsp; 9</h1>
          
         <div class="inner-form">
           <div class="input-field second-wrap">
