--- a/results.html
+++ b/results.html
@@ -41,6 +41,8 @@
       .green{
         color:green !important;
       }
+      .black{
+        color:black !important;}
       h1{
         font-size:200% !important;}
         .result{
@@ -101,7 +103,7 @@
   <body>
     <div class="s003">
       <form>
-         <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span>&nbsp; 9</h1>
+         <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span><span class="black">&nbsp;9</span></h1>
          
         <div class="inner-form">
           <div class="input-field second-wrap">
