--- a/results.html
+++ b/results.html
@@ -42,9 +42,8 @@
         color:green !important;
       }
       .black{
-        color:black !important;}
-      h1{
-        font-size:200% !important;}
+        color:black !important;
+      }
         .result{
             width:100%;
             height:80%;
