--- a/results.html
+++ b/results.html
@@ -4,7 +4,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="author" content="colorlib.com">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
     <style>
@@ -28,6 +27,11 @@
         .inner-form,form{
           display:flex !important;
         flex-direction:row !important;
+      }
+      h1{
+        position:absolute !important;
+        top:5% !important;
+        right: 5% !important;
       }
       .red{
         color:red !important;
@@ -100,10 +104,9 @@
     </style>
   </head>
   <body>
+    <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span><span class="black">&nbsp;9</span></h1>
     <div class="s003">
       <form>
-         <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span><span class="black">&nbsp;9</span></h1>
-         
         <div class="inner-form">
           <div class="input-field second-wrap">
             <input id="search" type="text" value="Gaming laptops" placeholder="Enter Keywords?" />
