--- a/results.html
+++ b/results.html
@@ -24,14 +24,12 @@
             position: fixed;
             top:5%;
         }
-        .inner-form,form{
-          display:flex !important;
-        flex-direction:row !important;
-      }
+       
       h1{
         position:absolute !important;
         top:5% !important;
-        right: 5% !important;
+        left: 5% !important;
+        font-family: 'Poppins', sans-serif;
       }
       .red{
         color:red !important;
