--- a/results.html
+++ b/results.html
@@ -25,12 +25,13 @@
             top:5%;
         }
        
-      h1{
+      a.title{
         position:absolute !important;
         top:5% !important;
         left: 5% !important;
         font-family: 'Poppins', sans-serif;
       }
+      h1{width:100%;height:100%;}
       .red{
         color:red !important;
       }
@@ -102,7 +103,7 @@
     </style>
   </head>
   <body>
-    <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span><span class="black">&nbsp;9</span></h1>
+    <a class="title" src="https://anilturaga.github.io/searchEngine/"><h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span><span class="black">&nbsp;9</span></h1></a>
     <div class="s003">
       <form>
         <div class="inner-form">
