--- a/results.html
+++ b/results.html
@@ -103,7 +103,9 @@
     </style>
   </head>
   <body>
-    <a class="title" src="https://anilturaga.github.io/searchEngine/"><h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span><span class="black">&nbsp;9</span></h1></a>
+    <a class="title" src="https://anilturaga.github.io/searchEngine/">
+      <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span>
+        <span class="black">&nbsp;9</span></h1></a>
     <div class="s003">
       <form>
         <div class="inner-form">
@@ -147,5 +149,5 @@
       });
 
     </script>
-  </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+  </body>
 </html>
