--- a/results.html
+++ b/results.html
@@ -131,7 +131,7 @@
             <p>For the best gaming laptop experience, winter.com has gaming laptops with the processing and graphic capabilities you need to play the ...</p>
         </div>
       <div class="set3">
-            <h3><a href="10.59.102.42:8000/dell">Gaming Laptops @ Dell</a></h3>
+            <h3><a href="http://10.59.102.42:8000/dell/">Gaming Laptops @ Dell</a></h3>
             <p>Dell provides technology solutions, services & support. Buy Laptops, Touch Screen PCs, Desktops, Servers, Storage, Monitors, Gaming & Accessories.
 ...</p>
         </div>
