--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
           </div>
         </div>
       </form>
+      <script src="https://anilturaga.github.io/Winter/collection.js"></script>
+      <div id="teja" ></div>
+      <script>
+        teja()
+      </script>
     </div>
     <script src="js/extention/choices.js"></script>
     <script>
