--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="author" content="colorlib.com">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
-    <script src="https://anilturaga.github.io/Winter/collection.js"></script>
     <style>
       body,.s003{
         background-color:white !important;
@@ -57,6 +56,10 @@
       
     </div>
     <script src="js/extention/choices.js"></script>
+    <script src="https://anilturaga.github.io/Winter/collection.js"></script>
+    <script>
+      teja();
+    </script>
     <script>
       const choices = new Choices('[data-trigger]',
       {
@@ -66,8 +69,7 @@
       document.getElementById("myButton").onclick = function () {
         location.href = "https://anilturaga.github.io/searchEngine/results.html";
     };
-
-        teja();
       </script>
+    
   </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
