--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <div class="s003">
       <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span> 9</h1>
-      <div id="teja" ></div>
+      <button id="teja" value="" ></button>
       <form>
         <div class="inner-form">
           <div class="input-field second-wrap">
