--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <div class="s003">
       <h1><span class="red">T</span><span class="blue">E</span><span class="orange">A</span><span class="green">M</span> 9</h1>
-      <a id="teja"> click me</a>
+      <input id="teja"> click me</input>
       <form>
         <div class="inner-form">
           <div class="input-field second-wrap">
