--- a/results.html
+++ b/results.html
@@ -123,7 +123,7 @@
       </form>
       <section class="result">
       <div class="set1">
-          <h3><a href="https://anilturaga.github.io/eiser/category.html">Gaming Laptops - Eiser</a></h3>
+          <h3><a href="https://anilturaga.github.io/eiser/eiser/category.html">Gaming Laptops - Eiser</a></h3>
           <p>Online shopping for Gaming Laptops from a great selection at Electronics Store.</p>
       </div>
       <div class="set2">
